# ir-news-brief-agent

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  LICENSE  README.md  UI_INSTRUCTIONS.md  ohjeet.md  pyproject.toml
.github/workflows/: ci.yml
brief_agent/: __init__.py  __main__.py  api.py  cache.py  cli.py  core.py  llm.py  planner.py  render.py  schemas.py  stocks.py  tools.py  utils.py
brief_agent/web/static/css/: style.css
brief_agent/web/static/js/: app.js
brief_agent/web/templates/: index.html
data/: sample_ir.json  sample_news.json
docs/: ARCHITECTURE.md  EXAMPLE_OUTPUT.md
tests/: test_schema.py  test_select_top.py
